--- a/app/views/stuffs/new.html.erb
+++ b/app/views/stuffs/new.html.erb
@@ -1,6 +1,7 @@
 <%= render 'shared/stuff_error'%>
 
-<%= form_with(model: @stuff, local: true, :html => { multipart: true }) do |form| %>
+<%= form_with(model: @stuff, local: true, data: {controller: "maps", action: "google-maps-callback@window->maps#initMap"}, :html => { multipart: true }) do |form| %>
+
   <div class="container">
     <h1>New Stuff</h1>
     <div class="field">
@@ -64,6 +65,25 @@
     <div class="field">
       <%= form.label :found_date %>
       <%= form.date_select :found_date %>
+    </div>
+
+    <div class="field">
+      <%= form.label :address %>
+      <%= form.text_field :address, data: { target: "maps.field", action: "keydown->maps#keydown" } %>
+    </div>
+
+    <div class="field">
+      <%= form.label :latitude %>
+      <%= form.text_field :latitude, data: { target: "maps.latitude" } %>
+    </div>
+
+    <div class="field">
+      <%= form.label :longitude %>
+      <%= form.text_field :longitude, data: { target: "maps.longitude" } %>
+    </div>
+
+    <div>
+      <div data-target="maps.map" class="map">
     </div>
 
     <div class="actions">
