--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -49,7 +49,7 @@
         </li>
         <li class="log-out nav-item">
           <%= link_to("Logout", destroy_user_session_path,
-              class:"btn btn-xs btn-danger logout-button", method: :delete) %>
+              class:"fa fa-sign-out btn btn-xs btn-danger logout-button", method: :delete) %>
         </li>
       </ul>
     <% end %>
