--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -30,6 +30,10 @@
 
 .new-btn {
   background-color:  #152F4F;
+  color: white;
+}
+.new-btn:hover {
+  color: gainsboro;
 }
 .my-acc {
   background-color: #ffc107;
@@ -381,4 +385,29 @@
 .map {
   width: 100%;
   min-height: 400px;
+}
+
+
+
+
+
+
+//advance search div size
+#advance-search {
+  width: auto;
+  height: 200px;
+  margin: 2%;
+}
+//btn for advance search
+#btn-adv {
+  float: right;
+  margin-right: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  overflow:auto;
+  position: absolute;
+  right:    3%;
+  bottom:   3%;
+  height: 30px;
+  width: 80px;
 }
