--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center mt-4">Categories</h1>
+<h1 class="text-center">Category</h1>
   <% @categories.each do |category| %>
     <div class="container card text-center shadow mb-5 rounded" id="category-index">
       <div class="card-body">
