--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -394,20 +394,18 @@
 
 //advance search div size
 #advance-search {
-  width: auto;
-  height: 200px;
+  width: 40%;
+  height: 230px;
   margin: 2%;
 }
 //btn for advance search
-#btn-adv {
-  float: right;
-  margin-right: 0px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
-  overflow:auto;
-  position: absolute;
-  right:    3%;
-  bottom:   3%;
-  height: 30px;
-  width: 80px;
-}
+//#btn-adv {
+//  float: right;
+//  margin-right: 0px;
+//  font-family: Arial, Helvetica, sans-serif;
+//  font-size: 12px;
+//  overflow:auto;
+//  position: absolute;
+//  right:    3%;
+//  bottom:   3%;
+//}
