update home page style

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -376,9 +376,9 @@
   text-decoration:none;
   color: black;
 }
-.icon-position a:hover {
-  color: gainsboro;
-}
+//.icon-position a:hover {
+//  color: gainsboro;
+//}
 
 
 
