--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,4 +1,5 @@
 <nav class="navbar navbar-expand-xl py-3 navbar-light bg-light" id="navbar">
+<div class="container">
   <%= link_to "FindLost", root_path, class:"navbar-brand text-warning" %>
   <% if current_user %>
     <button class="navbar-toggler custom-toggler bg-iconnav rounded" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,17 +7,6 @@
     </button>
   <% end %>
   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" style="color:white" href="#">About</a><!--responsive ne radi dobro-->
-      </li>
-      <li class="nav-item">
-        <%= link_to "Found", find_stuffs_path, class: "nav-link", style: "color: white" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Lost", lost_stuffs_path, class: "nav-link", style: "color: white" %>
-      </li>
-    </ul>
     <ul class="navbar-nav">
       <% if current_user %>
         <% if user_signed_in? == current_user.admin? %>
@@ -36,13 +26,7 @@
       <% end %>
     </ul>
     <% if current_user %>
-      <% if !current_user.admin? %>
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <%= link_to 'Categories', categories_path, class:"nav-link", style: "color: white", admin: false %>
-          </li>
-        </ul>
-      <% end %>
+      
       <ul class="navbar-nav ml-auto">
         <li class="user-name nav-item">
           <%= fa_icon 'user' %> <%= current_user.full_name %> <%= "(Admin)" if current_user.admin? %>
@@ -67,4 +51,5 @@
       </li>
     </ul>
   <% end %>  
+  </div>
 </nav>
