style for creating new stuff

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -388,14 +388,15 @@
 }
 
 
-
+.contact p {
+  margin-top: 10%;
+}
 
 
 
 //advance search div size
 #advance-search {
-  width: 40%;
-  height: 230px;
+  height: auto;
   margin: 2%;
 }
 //btn for advance search
