show stuff page style

--- a/app/views/stuffs/new.html.erb
+++ b/app/views/stuffs/new.html.erb
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <h1>New Stuff</h1>
+        <h1 class="my-3">New Stuff</h1>
         <div class="field my-3">
           <%= form.label :title %>
           <%= form.text_field :title, class:"form-control", placeholder:"Title" %>
@@ -53,7 +53,7 @@
         
       </div>
       <div class="col">
-        <div class="my-5">
+        <div class="card my-5">
           <div data-target="maps.map" class="map">
         </div>
       </div>
