--- a/app/views/stuffs/index.html.erb
+++ b/app/views/stuffs/index.html.erb
@@ -6,8 +6,8 @@
       <div class="col-sm-2 my-5">
         <h1 class="my-4">Stuffs</h1>
         <div class="list-group list-border">
-          <a><%= link_to 'New Stuff', new_stuff_path, class:'new-btn btn' %></a>
-          <a><%= link_to 'My account', edit_user_registration_path(@user), class:'my-acc btn btn-warning my-2' %></a>
+          <a><%= link_to 'New Stuff', new_stuff_path, class:'fa fa-plus new-btn btn' %></a>
+          <a><%= link_to 'My account', edit_user_registration_path(@user), class:'fa fa-address-card my-acc btn btn-warning my-2' %></a>
           <!--<a><%= link_to 'Find items', find_stuffs_path, class:'btn btn-primary my-1' %></a>
           <a><%= link_to 'Lost items', lost_stuffs_path, class:'btn btn-primary my-1' %></a>-->
         </div>
