--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,54 +1,78 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= bootstrap_devise_error_messages! %>
-  <div class="wrapper">
-  <div class="form-signin shadow" id="edit-devise-container">
-    <h2 class="form-signin-heading text-center"><%= t('.title', resource: resource_name.to_s.humanize) %></h2>
-    
-    <div class="form-group">
-      <%= f.label :username %><br />
-      <%= f.text_field :username, autofocus: true, autocomplete: 'username', class: 'form-control' %>
-    </div>
+  
 
-    <div class="form-group">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
-    </div>
-
-    <div class="form-group">
-      <%= f.label :phone_number %>
-      <%= f.text_field :phone_number, autofocus: true, autocomplete: 'username', class: 'form-control' %>
-    </div>
-
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-    <% end %>
-    <div class="form-group">
-      <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-      <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
-      <% if @minimum_password_length %>
-        <br />
-        <em><%= @minimum_password_length %> characters minimum</em>
-      <% end %>
-    </div>
-
-    <div class="form-group">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
-    </div>
-
-    <div class="form-group">
-      <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-      <%= f.password_field :current_password, autocomplete: "current-password", class: 'form-control' %>
-    </div>
-
-    <div class="form-group">
-      <%= f.submit t('.update'), class: 'btn btn-primary' %>
-    </div>
-
-    <div class="dropdown-divider"></div>
-    <p><%= link_to t('.delete_my_account'), registration_path(resource_name), data: { confirm: t('.are_you_sure') }, method: :delete %></p>
-    <%= link_to t('.back'), :back %>
-  </div>
-<% end %>
-  <%= render 'stuffs/stuffs'%>
 </div>
+
+<div class="container">
+  <div class="row">
+    <div class="col my-5">
+        <div class="form-signin shadow" id="edit-devise-container">
+          <h2 class="form-signin-heading text-center"><%= t('.title', resource: resource_name.to_s.humanize) %></h2>
+
+          <div class="form-group">
+            <%= f.label :username %><br />
+            <%= f.text_field :username, autofocus: true, autocomplete: 'username', class: 'form-control' %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :email %><br />
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :phone_number %>
+            <%= f.text_field :phone_number, autofocus: true, autocomplete: 'username', class: 'form-control' %>
+          </div>
+
+          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+            <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+          <% end %>
+          <div class="form-group">
+            <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+            <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
+            <% if @minimum_password_length %>
+              <br />
+              <em><%= @minimum_password_length %> characters minimum</em>
+            <% end %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :password_confirmation %><br />
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+            <%= f.password_field :current_password, autocomplete: "current-password", class: 'form-control' %>
+          </div>
+
+          <div class="form-group">
+            <%= f.submit t('.update'), class: 'btn btn-primary' %>
+          </div>
+
+          <div class="dropdown-divider"></div>
+          <p><%= link_to t('.delete_my_account'), registration_path(resource_name), data: { confirm: t('.are_you_sure') }, method: :delete %></p>
+          <!--<%= link_to t('.back'), :back %>-->
+          <%= link_to 'Back', root_path %>
+        </div>
+    </div>
+    <div class="col my-5">
+      <%= render 'stuffs/stuffs'%>
+      <div class="container rounded apple_pagination mb-4 my-5" id="pagination-container">
+        <%= will_paginate @stuffs, :container => false %>
+      </div>
+    </div>
+    
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+<% end %>
