--- a/app/views/stuffs/show.html.erb
+++ b/app/views/stuffs/show.html.erb
@@ -11,15 +11,20 @@
       <div type="button" class="popup btn btn-outline-info my-5" onclick="myFunction()"> <%= fa_icon 'phone' %> Click for phone number
         <span class="popuptext" id="myPopup"><%= @stuff.user.phone_number %></span>
       </div>
-      <p id="usernum" class="my-1">User: 
+      <p id="usernum" class="my-1"><strong>User: </strong>
       <% if user_signed_in? %>
         <%= @stuff.user.username if @stuff.user%>
       <% end %>
       </p>
 
       <div class="my-3">
-        <p>Address:
+        <p><strong>Address:</strong>
         <%= @stuff.address %></p>
+      </div>
+
+      <div class="my-3">
+        <p><strong>Date Foun/Lost:</strong>
+        <%= @stuff.found_date %></p>
       </div>
 
     </div>
@@ -29,7 +34,7 @@
       </div>
     </div>
   </div>
-  <p>Description:</p>
+  <p><strong>Description:</strong></p>
   <div class="container my-5" id="description">
     
     <p style="padding:3%">
